<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/logtip_fra"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_log_tip"
            android:layout_width="wrap_content"
            android:layout_height="20dip"
            android:layout_marginLeft="10dp"
            android:text="@string/log_tip"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_clear_log"
            android:layout_width="wrap_content"
            android:layout_height="33dip"
            android:layout_marginRight="15dip"
            android:gravity="center"
            android:paddingBottom="3dip"
            android:paddingTop="3dip"
            android:text="@string/clear_log"
            android:textSize="15sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/stroll_text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_weight="1"
        android:background="#707070" >

        <TextView
            android:id="@+id/text_log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dip"
            android:textIsSelectable="true" />
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/firstBtnLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_initAK"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="1.0"
                android:text="@string/text_btn_initAK" />

            <Button
                android:id="@+id/btn_init"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/text_btn_init" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secendBtnLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_unbindTags"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="1.0"
                android:text="@string/text_btn_unbind" />

            <Button
                android:id="@+id/btn_rich"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/text_btn_rich" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdBtnLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_setTags"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="1.0"
                android:text="@string/text_btn_setTags" />

            <Button
                android:id="@+id/btn_delTags"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/text_btn_delTags" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourBtnLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_showTags"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="1.0"
                android:text="@string/text_btn_showTags" />

            <Button
                android:id="@+id/btn_setunDisturb"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/text_btn_setunDisturb" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>